Closed Bug 1274892 Opened 10 years ago Closed 10 years ago

Abort in mozilla::MediaSourceDemuxer::GetTrackDemuxer

Categories

(Core :: Audio/Video: Playback, defect, P1)

x86
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla49
Tracking Status
firefox49 --- fixed

People

(Reporter: n.nethercote, Assigned: jya)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-3f7478b7-9bd4-4284-979a-1f8282160522. ============================================================= There have been 68 occurrences of this bug in the past 7 days across all products and versions. Every crash report I looked at was hitting this line: MOZ_CRASH("TODO: sourcebuffer was deleted from under us"); I see crashes like this going back to at least November 2015, but possibly longer. On Windows, Mac and Android. jya, can you please investigate?
The condition will be perfectly handled by the MediaFormatReader anyway. Review commit: https://reviewboard.mozilla.org/r/54502/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/54502/
Attachment #8755271 - Flags: review?(cpearce)
Assignee: nobody → jyavenard
Comment on attachment 8755271 [details] MozReview Request: Bug 1274892: [MSE] Don't crash when source buffer is deleted early. r?cpearce https://reviewboard.mozilla.org/r/54502/#review51308
Attachment #8755271 - Flags: review?(cpearce) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla49
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: