Bug 1274892: [MSE] Don't crash when source buffer is deleted early. r=cpearce

The condition will be perfectly handled by the MediaFormatReader anyway.

MozReview-Commit-ID: Dm6evq6T4t6